# Bazy-Danych-1

./: .gitmodules  .terminator.sh.swp  Pipfile  biblioteka_zapytania.py  linki.csv  pyproject.toml  terminator.sh
source/: conf.py  index.rst
source/rozdzial_1/: .index.rst.swp  index.rst
source/rozdzial_2/: .index.rst.swp  index.rst
source/rozdzial_3/: .index.rst.swp  index.rst
source/rozdzial_4/: index.rst
source/rozdzial_5/: index.rst
